--- a/cybernetics_website_final/extras.html
+++ b/cybernetics_website_final/extras.html
@@ -45,9 +45,9 @@
   <section id="extras-starting-banner">
     <header>
       <h1 class="slide-up show-on-scroll">CYBERNETICS</h1>
-
     </header>
   </section>
+
   <section>
     <div id="extras-sub-header-container">
       <p class="slide-right show-on-scroll" id="extras-sub-header">Extras</p>
@@ -66,21 +66,11 @@
           <source src="assets/videos/stafford_beer_feedback.mp4" type="video/mp4">
         </video>
       </a>
+      <div class="middle">
+    <div><a class="extra-1-button" href="https://www.youtube.com/watch?v=e_bXlEvygHg" target="_blank">Play</a></div>
+    </div>
     </div>
 
-    <!-- <div id="history-mcculloch-pitts">
-      <div id="mcculloch">
-        <a href="https://youtu.be/8Wdz1Tj5084" target="_blank">
-          <img src="assets/images/mcculloch.jpeg" alt="mculloch-image">
-        </a>
-      </div>
-
-      <div id="pitts">
-        <a href="https://nautil.us/the-man-who-tried-to-redeem-the-world-with-logic-2885/" target="_blank">
-          <img src="assets/images/pitts.jpg" alt="pitts-image">
-        </a>
-      </div>
-    </div> -->
   </section>
 
   <!-- Section - Extra 2 -->
@@ -98,15 +88,24 @@
 
   <!-- Section - Extra 3 -->
   <section class="extras-styling" id="extra-3">
-    <h2>Cyborgs & Body Modification</h2>
+    <h2>Body Modification</h2>
 
     <div id="body-mod-1">
       <a href="https://medium.com/@neurovizum/elon-musk-shared-details-about-the-progress-in-developing-a-sci-fi-brain-implant-by-his-neuralink-c5d625f7c478" target="_blank">
         <img src="assets/images/neurolink.png" alt="neurolink-image">
       </a>
+      <div class="middle">
+        <div>
+          <a class="extra-1-button" href="https://www.youtube.com/watch?v=e_bXlEvygHg" target="_blank">Play</a>
+        </div>
+      </div>
     </div>
-    <p>Some argue these kinds of medical innovations will continue until eventually healthy individuals begin utilizing them in order to augment their own bodies and abilities.
+    <p>Some claim these kinds of medical innovations will eventually be utilized by healthy individuals in order to augment their bodies and abilities.
+      <br>
+      <br>
+      We have yet to see if that will actually occur. However, advances in human-machine integration technologies are on the horizon. Perhaps people should be educated about what benefits and risks they will entail.
     </p>
+
     <!-- <div id="body-mod-2">
       <a href="https://medium.com/@neurovizum/elon-musk-shared-details-about-the-progress-in-developing-a-sci-fi-brain-implant-by-his-neuralink-c5d625f7c478" target="_blank">
         <img src="assets/images/musk-neurolink.jpg" alt="neurolink-image">
