--- a/cybernetics_website_final/index.html
+++ b/cybernetics_website_final/index.html
@@ -163,13 +163,13 @@
     <!-- P5 Sketch -->
     <div id="sketch-holder"></div>
 
-    <div id="found-message">
+    <!-- <div id="found-message">
       <p>
-        <!-- If you couldn't course correct, you would never find the message! -->
-        <!-- To find the hidden message you probably overshot the movement slightly and had to adjust. The ability to sense and adapt is fundamental to Cybernetics systems. -->
-        <!-- Try making some interesting patterns with the sine wave. You will notice that same process of adjustment until you reach the desired pattern. -->
+        If you couldn't course correct, you would never find the message!
+        To find the hidden message you probably overshot the movement slightly and had to adjust. The ability to sense and adapt is fundamental to Cybernetics systems.
+        Try making some interesting patterns with the sine wave. You will notice that same process of adjustment until you reach the desired pattern.
       </p>
-    </div>
+    </div> -->
 
   </section>
 
@@ -183,12 +183,15 @@
       <div class="ellipse">
         <img src="assets/images/wiener_3.png" alt="wiener-image">
       </div>
+      <div id="regulation-sub-header">
+
       <p>
-        One of the key elements of a cybernetic system is that it is also self regulating. For example, all of the neurons in your brain function without direct instructions from you.
+        Cybernetic systems are also self regulating. For example, all of the neurons in your brain function without direct instructions from you.
         <br>
         <br>
         Whereas something like a musicbox is not self-regulating.
       </p>
+    </div>
 
     </div>
 
@@ -206,7 +209,7 @@
     </div>
 
     <div id="regulation-revealed-text">
-      <p> Note how the dancing figurine is not self regulating or adaptive. It doesn't sense anything therefore it can't respond to feedback. It can only do what it was directly programmed to do.</p>
+      <p> Note how the dancing figurine is not adaptive. It doesn't sense anything therefore it can't respond to feedback. It can only do what it was directly programmed to do.</p>
     </div>
   </section>
 
@@ -270,6 +273,7 @@
     <h2>Intermission</h2>
 
     <div class="sub-header-section">
+
       <div class="ellipse">
         <img src="assets/images/wiener_phone.png" alt="wiener-image">
       </div>
