--- a/cybernetics_website_final/sources.html
+++ b/cybernetics_website_final/sources.html
@@ -58,7 +58,7 @@
   <section class="sources-styling" id="sources-1">
     <h2> Artist's Statement</h2>
 
-    <p> This website is an educational experience designed to introduce people the basic concepts of Cybernetics. The focus for the project is to use all of the various tools available in html, css, and javascript in order to present an engaging and interactive experience. Given the growing relevance of technology in everyday life, I believe Cybernetics is a topic worth exploring. Furthermore, its relevance is likely to become more prominent in the near future. Especially in regards to medicine and personal body modification. There are also wortwhile discussions that should be had about the potential negative aspects of Cybernetic technologies. Will people lose a sense of human autonomy if they cotninue to integrate themselves with machine systems? In order to explore these questions, I believe it is important to understand the context within which they are being asked. This will require people to become more educated on what Cybernetics is, and why it is relevant. This project attempts to begin that educational process so that such discussions can take place.
+    <p> This website is an educational experience designed to introduce people to the basic concepts of Cybernetics. The focus for the project is to use all of the various tools available in html, css, and javascript in order to present an engaging and interactive experience. Given the growing relevance of technology in everyday life, I believe Cybernetics is a topic worth exploring. Furthermore, its relevance is likely to become more prominent in the near future. Especially in regards to medicine and personal body modification. There are also wortwhile discussions that should be had about the potential negative aspects of Cybernetic technologies. Will people lose a sense of human autonomy if they continue to integrate themselves with machine systems? In order to explore these questions, I believe it is important to understand the context within which they are being asked. This will require people to become more educated on what Cybernetics is, and why it is relevant. This project attempts to begin that educational process so that such discussions can take place.
     </p>
 
   </section>
@@ -68,7 +68,6 @@
     <h2>Sources</h2>
 
     <p>
-      test
     </p>
   </section>
 
