--- a/cybernetics_website_final/extras.html
+++ b/cybernetics_website_final/extras.html
@@ -94,9 +94,9 @@
       <a href="https://medium.com/@neurovizum/elon-musk-shared-details-about-the-progress-in-developing-a-sci-fi-brain-implant-by-his-neuralink-c5d625f7c478" target="_blank">
         <img src="assets/images/neurolink.png" alt="neurolink-image">
       </a>
-      <div class="middle">
+      <div class="middle" id="extra-3-button-position">
         <div>
-          <a class="extra-1-button" href="https://www.youtube.com/watch?v=e_bXlEvygHg" target="_blank">Play</a>
+          <a class="extra-3-button" href="https://www.youtube.com/watch?v=e_bXlEvygHg" target="_blank">Read Article</a>
         </div>
       </div>
     </div>
@@ -106,13 +106,6 @@
       We have yet to see if that will actually occur. However, advances in human-machine integration technologies are on the horizon. Perhaps people should be educated about what benefits and risks they will entail.
     </p>
 
-    <!-- <div id="body-mod-2">
-      <a href="https://medium.com/@neurovizum/elon-musk-shared-details-about-the-progress-in-developing-a-sci-fi-brain-implant-by-his-neuralink-c5d625f7c478" target="_blank">
-        <img src="assets/images/musk-neurolink.jpg" alt="neurolink-image">
-      </a>
-      </dov>
-      <p> For example, businessman Elon Musk is developping a technology called NeuraLink which he claims will give people superhuman intelligence.
-      </p> -->
   </section>
 
 
