--- a/cybernetics_website_final/extras.html
+++ b/cybernetics_website_final/extras.html
@@ -78,7 +78,7 @@
 
     <h2> Medical Innovations </h2>
 
-    <p>Cybernetics can offer remedies in areas of medicine, such as spinal cord injury</p>
+    <p>Cybernetics can offer remedies in areas of medicine, such as spinal cord injury.</p>
 
     <div id="medical-innovations">
       <iframe width="420" height="315" src="https://www.youtube.com/embed/Vq5UBwVCFyc">
@@ -107,20 +107,6 @@
     </p>
 
   </section>
-
-
-  <!-- <section class="extras-styling" id="extra-4">
-    <h2>Future Dystopia</h2>
-
-    <p> There are some who claim that addictions are like Cybernetic system. The question is, can
-    </p>
-
-    <img style="width:150px;" src="assets/images/cyborg-dystopia-2.png" alt="cyborg-image">
-
-    <p> For example, billionaire Elon Musk is developping a technology called NeuraLink which he claims will give people superhuman intelligence.
-    </p>
-  </section> -->
-
 
   <!-- My script(s) -->
   <script src="js/script_sources.js"></script>
