--- a/cybernetics_website_final/index.html
+++ b/cybernetics_website_final/index.html
@@ -96,7 +96,7 @@
     <!-- Arrows animation -->
     <div id="feedback_arrows">
       <img src="assets/images/input_arrow_blue.png" alt="arrow_image" id="feedback_arrows_1">
-      <img src="assets/images/feedback_arrows.png" alt="feedback_arrow_image" id="feedback_arrows_center">
+      <img src="assets/images/feedback_arrows_2.png" alt="feedback_arrow_image" id="feedback_arrows_center">
       <img src="assets/images/input_arrow_blue_right.png" alt="arrow_image" id="feedback_arrows_2">
     </div>
 
@@ -163,13 +163,13 @@
     <!-- P5 Sketch -->
     <div id="sketch-holder"></div>
 
-    <!-- <div id="found-message">
+    <div id="found-message">
       <p>
-        If you couldn't course correct, you would never find the message!
-        To find the hidden message you probably overshot the movement slightly and had to adjust. The ability to sense and adapt is fundamental to Cybernetics systems.
-        Try making some interesting patterns with the sine wave. You will notice that same process of adjustment until you reach the desired pattern.
+        The ability to course correct is essential for autonomous systems.
+        <!-- To find the hidden message you probably overshot the movement slightly and had to adjust. The ability to sense and adapt is fundamental to Cybernetics systems.
+        Try making some interesting patterns with the sine wave. You will notice that same process of adjustment until you reach the desired pattern. -->
       </p>
-    </div> -->
+    </div>
 
   </section>
 
@@ -186,7 +186,7 @@
       <div id="regulation-sub-header">
 
       <p>
-        Cybernetic systems are also self regulating. For example, all of the neurons in your brain function without direct instructions from you.
+        Cybernetic systems are autonomous because they are self regulating. For example, all of the neurons in your brain function without direct instructions from you.
         <br>
         <br>
         Whereas something like a musicbox is not self-regulating.
@@ -209,7 +209,7 @@
     </div>
 
     <div id="regulation-revealed-text">
-      <p> Note how the dancing figurine is not adaptive. It doesn't sense anything therefore it can't respond to feedback. It can only do what it was directly programmed to do.</p>
+      <p> Note how the dancing figurine is not adaptive. Since it doesn't sense anything it can't respond to feedback. It can only do what it was directly programmed to do.</p>
     </div>
   </section>
 
