--- a/cybernetics_website_final/extras.html
+++ b/cybernetics_website_final/extras.html
@@ -78,10 +78,10 @@
 
     <h2> Medical Innovations </h2>
 
-    <p>Cybernetics can offer remedies in areas of medicine, such as spinal cord injury.</p>
+    <p>Cybernetics can offer remedies in areas of medicine such as spinal cord injury.</p>
 
     <div id="medical-innovations">
-      <iframe width="420" height="315" src="https://www.youtube.com/embed/Vq5UBwVCFyc">
+      <iframe width="495" height="315" src="https://www.youtube.com/embed/Vq5UBwVCFyc">
       </iframe>
     </div>
   </section>
@@ -96,7 +96,7 @@
       </a>
       <div class="middle" id="extra-3-button-position">
         <div>
-          <a class="extra-3-button" href="https://www.youtube.com/watch?v=e_bXlEvygHg" target="_blank">Read Article</a>
+          <a class="extra-3-button" href="https://medium.com/@neurovizum/elon-musk-shared-details-about-the-progress-in-developing-a-sci-fi-brain-implant-by-his-neuralink-c5d625f7c478" target="_blank">Read Article</a>
         </div>
       </div>
     </div>
@@ -107,6 +107,18 @@
     </p>
 
   </section>
+
+  <!-- Footer -->
+  <!-- <section class="footer">
+    <div id="footer-content-container">
+    <a href="" target="_blank"></a>
+    <a href="" target="_blank"></a>
+    <a href="" target="_blank"></a>
+    <a href="" target="_blank"></a>
+
+    </div>
+  </section> -->
+
 
   <!-- My script(s) -->
   <script src="js/script_sources.js"></script>
