--- a/cybernetics_website_final/index.html
+++ b/cybernetics_website_final/index.html
@@ -65,9 +65,7 @@
       </div>
 
       <div id="intro-sub-header">
-        <p class="show-on-scroll"> Hello students. How about a quick course on <span style="color: yellow;">  Cybernetics </span>? I am
-          Norbert Wiener, and I originated the modern
-       Cybernetics movement with my book:
+        <p class="show-on-scroll"> Hello students. How about a quick course on <span style="color: yellow;">  Cybernetics </span>? I am Norbert Wiener, and I originated the modern Cybernetics movement with my book:
         </p>
       </div>
     </div>
@@ -189,7 +187,7 @@
         Cybernetic systems are autonomous because they are self regulating. For example, all of the neurons in your brain function without direct instructions from you.
         <br>
         <br>
-        Whereas something like a musicbox is not self-regulating.
+        Whereas something like a music box is not self-regulating.
       </p>
     </div>
 
@@ -279,7 +277,7 @@
       </div>
 
       <p>
-        That's it for today class!
+        That's it for today's class!
         <!-- John von Neuman keeps prank calling me so we will have to continue this another time. -->
         <br>
         <br>
@@ -292,7 +290,13 @@
 
   <!-- Footer -->
   <!-- <section class="footer slide-up show-on-scroll">
+    <div id="footer-content-container">
+    <a href=""></a>
+    <a href=""></a>
+    <a href=""></a>
+    <a href=""></a>
 
+    </div>
   </section> -->
 
   <!-- My script(s) -->
