--- a/cybernetics_website_final/sources.html
+++ b/cybernetics_website_final/sources.html
@@ -58,19 +58,56 @@
   <section class="sources-styling" id="sources-1">
     <h2> Artist's Statement</h2>
 
-    <p> This website is an educational experience designed to introduce people to the basic concepts of Cybernetics. The focus for the project is to use all of the various tools available in html, css, and javascript in order to present an engaging and interactive experience. Given the growing relevance of technology in everyday life, I believe Cybernetics is a topic worth exploring. Furthermore, its relevance is likely to become more prominent in the near future. Especially in regards to medicine and personal body modification. There are also wortwhile discussions that should be had about the potential negative aspects of Cybernetic technologies. Will people lose a sense of human autonomy if they continue to integrate themselves with machine systems? In order to explore these questions, I believe it is important to understand the context within which they are being asked. This will require people to become more educated on what Cybernetics is, and why it is relevant. This project attempts to begin that educational process so that such discussions can take place.
+    <p> This website is an educational exposition designed to introduce people to the basic concepts of Cybernetics. The focus for the project is to use all of the various tools available in html, css, and javascript in order to present an engaging and interactive experience. Given the growing relevance of technology in everyday life, I believe Cybernetics is a topic worth exploring. Furthermore, its relevance is likely to become more prominent in the near future. Especially in regards to medicine and personal body modification. There are also wortwhile discussions that should be had about the potential negative aspects of Cybernetic technologies. Will people lose a sense of human autonomy if they continue to integrate themselves with machine systems? In order to explore these questions, I believe it is important to understand the context within which they are being asked. This will require people to become more educated on what Cybernetics is, and why it is relevant. This project attempts to begin that educational process so that such discussions can take place.
     </p>
 
   </section>
 
   <!-- Bibliography -->
-  <section  class="sources-styling" id="sources-2">
+  <section class="sources-styling" id="sources-2">
     <h2>Sources</h2>
+    <div id="sources-list">
+      <p>
+        Wiener, Norbert. 1961. <i>Cybernetics: Or, Control and Communication in the Animal and the Machine</i>. 2nd ed. New York: M.I.T. Press.
+      </p>
 
-    <p>
-    </p>
+      <p>"Feedback Loop." Wikipedia. March, 2022. https://en.wikipedia.org/wiki/Feedback#/media/File:General_Feedback_Loop.svg</p>
+      <p>"Vector Loop." Emoji Png. March, 2022. https://www.emojipng.com/preview/10552740 </p>
+      <p>"Free Arrow." Emoji Png. March, 2022. https://www.emojipng.com/preview/413388</p>
+      <p>Hight, Christopher. 2008. <i>Architectural Principles in the Age of Cybernetics</i>. New York: Routledge.</p>
+      <p>
+        "Norbert Wiener." On This Day. March, 2022.S https://www.onthisday.com/people/norbert-wiener
+      </p>
+
+      <p>"Cybernetics; or, Control and communication in the animal and the machine, 2nd Edition." Amazon. March, 2022. https://www.amazon.com/Cybernetics-Control-communication-animal-machine/dp/B0007HMBX0</p>
+
+      <p>
+          "Feedback / Stafford Beer." Channel: Javiar Livas Cantu. Accessed March, 2022. 47s. https://youtu.be/q3yNJPkdtYo
+      </p>
+
+      <p>
+          "A Brain Implant Brings a Quadriplegic’s Arm Back to Life." Channel: WIRED. Accessed March, 2022. 1m 25s. https://youtu.be/Vq5UBwVCFyc
+      </p>
+
+      <p>"Sailboat Transparent" Emoji Png. March, 2022. https://www.emojipng.com/preview/1116962</p>
+
+      <p>Bellotti, Marianne. “A Software Engineer’s Guide to Cybernetics.” Medium, September 13 2020, https://medium.com/software-safety/a-software-engineers-guide-to-cybernetics-d57c7def1453.</p>
+
+  <p>Novikov, D.A. <i>Cybernetics: From Past to Future</i>. Springer, 2016.</p>
+
+  <p>Reitman, Matthew. “Meet the First 'Reanimated' Quadriplegic Person.” InsideHook, July 22 2016, https://www.insidehook.com/article/tech/meet-the-first-reanimated-quadriplegic-person.</p>
+
+  <p>Stanley, Alyse. “Elon Musk Reveals His Cyborg Pigs.” Gizmodo, August 28 2020, https://gizmodo.com/elon-musk-reveals-his-cyborg-pigs-1844887278.</p>
+    </div>
   </section>
 
+  <!-- Footer -->
+  <section class="footer">
+    <div id="footer-content-container">
+    <a href="https://github.com/AzmatIshaq" target="_blank">Contact Webmaster</a>
+    <!-- <a href="https://cybsoc.org/" target="_blank">Cybernetics Society</a> -->
+    </div>
+  </section>
 
   <!-- My script(s) -->
   <script src="js/script_sources.js"></script>
