--- a/cybernetics_website_final/index.html
+++ b/cybernetics_website_final/index.html
@@ -57,20 +57,18 @@
 
   <!-- First Section INTRODUCTION -->
   <section id="introduction" class="slide-up show-on-scroll home">
-    <br>
-    <br>
     <div class="sub-header-section">
       <div class="ellipse slide-right show-on-scroll">
         <img src="assets/images/wiener_1.png" alt="wiener-image">
       </div>
-
+      <!-- Sub Header -->
       <div id="intro-sub-header">
-        <p class="show-on-scroll"> Hello students. How about a quick course on <span style="color: yellow;">  Cybernetics </span>? I am Norbert Wiener, and I originated the modern Cybernetics movement with my book:
+        <p class="show-on-scroll"> Hello students. How about a quick course on <span style="color: yellow;"> Cybernetics </span>? I am Norbert Wiener, and I originated the modern Cybernetics movement with my book:
         </p>
       </div>
     </div>
 
-    <!-- End of sub header section -->
+    <!-- Book Section -->
     <div class="show-on-scroll" id="book-section-image-container">
       <a href="https://www.goodreads.com/book/show/294941.Cybernetics" target="_blank"> <img src="assets/images/wiener_book_9.jpg" alt="wiener-book"> </a>
     </div>
@@ -79,19 +77,14 @@
       <p>
         <i>Cybernetics: Or Control and Communication in the Animal and the Machine</i>.
       </p>
-      <!-- <div>
-        <p>
-            Bellow is a diagram of a homeostatic information system.
-        </p>
-      </div> -->
     </div>
 
-
+    <!-- Section Question -->
     <div class="section-question" id="intro-section-question">
       <p>What does this animation represent?</p>
     </div>
 
-    <!-- Arrows animation -->
+    <!-- Arrows Animation -->
     <div id="feedback_arrows">
       <img src="assets/images/input_arrow_blue.png" alt="arrow_image" id="feedback_arrows_1">
       <img src="assets/images/feedback_arrows_2.png" alt="feedback_arrow_image" id="feedback_arrows_center">
@@ -108,11 +101,12 @@
   <!-- Second Section CHOICE -->
   <section id="choice" class=" show-on-scroll home">
     <h2>Choice</h2>
+
+    <!-- Sub Header -->
     <div class="sub-header-section">
       <div class="ellipse">
         <img src="assets/images/wiener_2.png" alt="wiener-image">
       </div>
-
       <p>
         Yes, it is feedback loops!
         <br>
@@ -124,6 +118,7 @@
     <!-- Button to return to top -->
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
+    <!-- Section Question -->
     <div class="section-question" id="choice-section-question">
       <p>Are you a cybernetic system?
       </p>
@@ -135,16 +130,18 @@
       <button id="choice-no" class="button"> No</button>
     </div>
 
+    <!-- Animated Sailboat -->
     <span id="animated-artifact">
       <img src="assets/images/sailboat-4.png" width="100px" height="100px">
     </span>
-
 
   </section>
 
   <!-- Third Section CONNECT -->
   <section id="connect" class="slide-up show-on-scroll home">
     <h2>Sense and Correct</h2>
+
+    <!-- Sub Header -->
     <div class="sub-header-section">
       <div class="ellipse">
         <img src="assets/images/wiener_cigar.png" alt="wiener-image">
@@ -154,6 +151,7 @@
       </p>
     </div>
 
+    <!-- Section Question -->
     <div class="section-question" id="connect-section-question">
       <p> Find the hidden message at the center of the sine wave.</p>
     </div>
@@ -164,8 +162,6 @@
     <div id="found-message">
       <p>
         The ability to course correct is essential for autonomous systems.
-        <!-- To find the hidden message you probably overshot the movement slightly and had to adjust. The ability to sense and adapt is fundamental to Cybernetics systems.
-        Try making some interesting patterns with the sine wave. You will notice that same process of adjustment until you reach the desired pattern. -->
       </p>
     </div>
 
@@ -177,28 +173,30 @@
 
     <h2>Self-Regulation</h2>
 
+    <!-- Sub Header -->
     <div class="sub-header-section">
       <div class="ellipse">
         <img src="assets/images/wiener_3.png" alt="wiener-image">
       </div>
       <div id="regulation-sub-header">
 
-      <p>
-        Cybernetic systems are autonomous because they are self regulating. For example, all of the neurons in your brain function without direct instructions from you.
-        <br>
-        <br>
-        Whereas something like a music box is not self-regulating.
-      </p>
+        <p>
+          Cybernetic systems are autonomous because they are self regulating. For example, all of the neurons in your brain function without direct instructions from you.
+          <br>
+          <br>
+          Whereas something like a music box is not self-regulating.
+        </p>
+      </div>
     </div>
 
-    </div>
-
+    <!-- Section Question -->
     <div class="section-question" id="regulation-section-question">
       <p>
         Try clicking on the music box.
       </p>
     </div>
 
+    <!-- Music Box -->
     <div id="figurine-container">
       <img src="assets/images/figurine-no-box.png" alt="figurine">
     </div>
@@ -206,6 +204,7 @@
       <img src="assets/images/musical-box-no-figurine-2.png" alt="music-box">
     </div>
 
+    <!-- Revealed Text -->
     <div id="regulation-revealed-text">
       <p> Note how the dancing figurine is not adaptive. Since it doesn't sense anything it can't respond to feedback. It can only do what it was directly programmed to do.</p>
     </div>
@@ -216,19 +215,20 @@
 
     <h2>Test Your Knowledge</h2>
 
+    <!-- Sub Header Section -->
     <div class="sub-header-section">
-
       <div class="ellipse">
         <img src="assets/images/wiener_chalkboard_LI.jpg" alt="wiener-image">
       </div>
 
+      <!-- Section Question -->
       <div class="section-question" id="test-section-question">
         <!-- <p>Test your knowldge</p> -->
         <p>Drag the words onto the feedback model on the correct location</p>
       </div>
     </div>
 
-    <!-- Test model text -->
+    <!-- Test model draggable text -->
     <div class="test-model-text-1">
       <div>
         <img src="assets/images/input.png" alt="input-image" class="drag-model-text">
@@ -255,6 +255,7 @@
       <img src="assets/images/feedback-model-new.png" alt="feedback-model-image">
     </div>
 
+    <!-- Test Model Solution -->
     <div id="test-model-answers">
       <img src="assets/images/feedback-model-new-answers.png" alt="feedback-model-answers-image">
     </div>
@@ -265,39 +266,25 @@
   </section>
 
   <!-- Sixth Section -->
-
   <section id="conclusion" class="slide-up show-on-scroll">
 
     <h2>Intermission</h2>
 
+    <!-- Sub Header Section -->
     <div class="sub-header-section">
-
       <div class="ellipse">
         <img src="assets/images/wiener_phone.png" alt="wiener-image">
       </div>
 
       <p>
         That's it for today's class!
-        <!-- John von Neuman keeps prank calling me so we will have to continue this another time. -->
         <br>
         <br>
         To learn more, check the <a href="extras.html">Extras</a> section.
       </p>
     </div>
 
-
   </section>
-
-  <!-- Footer -->
-  <!-- <section class="footer slide-up show-on-scroll">
-    <div id="footer-content-container">
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
-
-    </div>
-  </section> -->
 
   <!-- My script(s) -->
   <script src="js/script.js"></script>
