--- a/cybernetics_website_final/sources.html
+++ b/cybernetics_website_final/sources.html
@@ -44,9 +44,10 @@
     <section id="extras-starting-banner">
       <header>
         <h1 class="slide-up show-on-scroll">CYBERNETICS</h1>
-
       </header>
     </section>
+
+      <!-- Sub Header -->
     <section>
       <div id="extras-sub-header-container">
         <p class="slide-right show-on-scroll" id="extras-sub-header">Sources+</p>
@@ -67,45 +68,61 @@
   <section class="sources-styling" id="sources-2">
     <h2>Sources</h2>
     <div id="sources-list">
-      <p>
-        Wiener, Norbert. 1961. <i>Cybernetics: Or, Control and Communication in the Animal and the Machine</i>. 2nd ed. New York: M.I.T. Press.
-      </p>
 
-      <p>"Feedback Loop." Wikipedia. March, 2022. https://en.wikipedia.org/wiki/Feedback#/media/File:General_Feedback_Loop.svg</p>
-      <p>"Vector Loop." Emoji Png. March, 2022. https://www.emojipng.com/preview/10552740 </p>
-      <p>"Free Arrow." Emoji Png. March, 2022. https://www.emojipng.com/preview/413388</p>
-      <p>Hight, Christopher. 2008. <i>Architectural Principles in the Age of Cybernetics</i>. New York: Routledge.</p>
-      <p>
-        "Norbert Wiener." On This Day. March, 2022.S https://www.onthisday.com/people/norbert-wiener
-      </p>
+      <p>"A Brain Implant Brings a Quadriplegic’s Arm Back to Life." Channel: WIRED. Accessed March, 2022. 1m 25s. https://youtu.be/Vq5UBwVCFyc</p>
 
-      <p>"Cybernetics; or, Control and communication in the animal and the machine, 2nd Edition." Amazon. March, 2022. https://www.amazon.com/Cybernetics-Control-communication-animal-machine/dp/B0007HMBX0</p>
-
-      <p>
-          "Feedback / Stafford Beer." Channel: Javiar Livas Cantu. Accessed March, 2022. 47s. https://youtu.be/q3yNJPkdtYo
-      </p>
-
-      <p>
-          "A Brain Implant Brings a Quadriplegic’s Arm Back to Life." Channel: WIRED. Accessed March, 2022. 1m 25s. https://youtu.be/Vq5UBwVCFyc
-      </p>
-
-      <p>"Sailboat Transparent" Emoji Png. March, 2022. https://www.emojipng.com/preview/1116962</p>
+      <p> Bellow, Francis. “Norbert Wiener.” Science Photo Library. Accessed March, 2022. https://www.sciencephoto.com/media/229292/view/norbert-wiener</p>
 
       <p>Bellotti, Marianne. “A Software Engineer’s Guide to Cybernetics.” Medium, September 13 2020, https://medium.com/software-safety/a-software-engineers-guide-to-cybernetics-d57c7def1453.</p>
 
-  <p>Novikov, D.A. <i>Cybernetics: From Past to Future</i>. Springer, 2016.</p>
+      <p>"Cybernetics; or, Control and communication in the animal and the machine, 2nd Edition." Amazon. March, 2022. https://www.amazon.com/Cybernetics-Control-communication-animal-machine/dp/B0007HMBX0</p>
 
-  <p>Reitman, Matthew. “Meet the First 'Reanimated' Quadriplegic Person.” InsideHook, July 22 2016, https://www.insidehook.com/article/tech/meet-the-first-reanimated-quadriplegic-person.</p>
+      <p>"Feedback / Stafford Beer." Channel: Javiar Livas Cantu. Accessed March, 2022. 47s. https://youtu.be/q3yNJPkdtYo</p>
 
-  <p>Stanley, Alyse. “Elon Musk Reveals His Cyborg Pigs.” Gizmodo, August 28 2020, https://gizmodo.com/elon-musk-reveals-his-cyborg-pigs-1844887278.</p>
+      <p>"Feedback Loop." Wikipedia. March, 2022. https://en.wikipedia.org/wiki/Feedback#/media/File:General_Feedback_Loop.svg</p>
+
+      <p>"Free Arrow." Emoji Png. March, 2022. https://www.emojipng.com/preview/413388</p>
+
+      <p>Hight, Christopher. 2008. <i>Architectural Principles in the Age of Cybernetics</i>. New York: Routledge.</p>
+
+      <p>LucasVB. “Sine waves, same phase.” Wikimedia. Accessed March, 2022. https://commons.wikimedia.org/wiki/File:Sine_waves_same_phase.svg</p>
+
+      <p>“Music Box Ballerina.” Emoji Png. Accessed March, 2022. https://www.emojipng.com/preview/12620429</p>
+
+      <p>"Neurons." Medium. Accesed March, 2022. https://medium.com/human-restoration-project/making-progress-on-progressive-education-first-empower-teachers-83f948ae8c43</p>
+
+      <p>“Norbert Wiener, enjoying a smoke.” Norbert Wiener Center for Harmonic Analysis and Applications.  Accessed Mach, 2022. http://www.norbertwiener.umd.edu/NW/NWphotos.html</p>
+
+      <p>"Norbert Wiener." On This Day. March, 2022.S https://www.onthisday.com/people/norbert-wiener</p>
+
+      <p>“Norbert Wiener.” Norbert Wiener Center for Harmonic Analysis and Applications.  Accessed Mach, 2022. http://www.norbertwiener.umd.edu/NW/NWphotos.html</p>
+
+      <p>Novikov, D.A. <i>Cybernetics: From Past to Future</i>. Springer, 2016.</p>
+
+      <p>Reitman, Matthew. “Meet the First 'Reanimated' Quadriplegic Person.” InsideHook, July 22 2016, https://www.insidehook.com/article/tech/meet-the-first-reanimated-quadriplegic-person.</p>
+
+      <p>"Sailboat Transparent" Emoji Png. March, 2022. https://www.emojipng.com/preview/1116962</p>
+
+      <p>Stanley, Alyse. “Elon Musk Reveals His Cyborg Pigs.” Gizmodo, August 28 2020, https://gizmodo.com/elon-musk-reveals-his-cyborg-pigs-1844887278.</p>
+
+      <p>“The Absent-Minded Father of Cybernetics, Norbert Wiener.” Privatedozent. Accessed March, 2022. https://www.privatdozent.co/p/the-absent-minded-father-of-cybernetics-db9?s=r</p>
+
+      <p>“The Eccentric Genius Whose Time May Have Finally Come (Again)” The Atlantic.  Accessed March, 2022. https://www.theatlantic.com/technology/archive/2014/06/norbert-wiener-the-eccentric-genius-whose-time-may-have-finally-come-again/372607/</p>
+
+      <p>“US scientist Norbert Wiener.” The Engineer. Accessed March, 2022. https://www.theengineer.co.uk/late-great-engineers-norbert-wiener/
+
+      <p>"Vector Loop." Emoji Png. March, 2022. https://www.emojipng.com/preview/10552740 </p>
+
+      <p>Wiener, Norbert. 1961. <i>Cybernetics: Or, Control and Communication in the Animal and the Machine</i>. 2nd ed. New York: M.I.T. Press.</p>
+
+
     </div>
   </section>
 
   <!-- Footer -->
   <section class="footer">
     <div id="footer-content-container">
-    <a href="https://github.com/AzmatIshaq" target="_blank">Contact Webmaster</a>
-    <!-- <a href="https://cybsoc.org/" target="_blank">Cybernetics Society</a> -->
+      <a href="https://github.com/AzmatIshaq" target="_blank">Contact Webmaster</a>
     </div>
   </section>
 
