--- a/cybernetics_website_final/extras.html
+++ b/cybernetics_website_final/extras.html
@@ -23,9 +23,11 @@
   <!-- p5 -->
   <!-- <script src="js/libraries/p5.min.js"></script>
   <script src="js/libraries/p5.sound.min.js"></script> -->
+
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+
   <!-- My p5 sketch -->
   <script src="js/sketch.js"></script>
 
@@ -48,6 +50,7 @@
     </header>
   </section>
 
+  <!-- Sub Header -->
   <section>
     <div id="extras-sub-header-container">
       <p class="slide-right show-on-scroll" id="extras-sub-header">Extras</p>
@@ -59,16 +62,16 @@
 
     <h2> History</h2>
 
-
+    <!-- History Video -->
     <div id="stafford-video">
-      <a href="https://youtu.be/e_bXlEvygHg" target="_blank">
-        <video autoplay muted loop id="myVideo">
-          <source src="assets/videos/stafford_beer_feedback.mp4" type="video/mp4">
-        </video>
-      </a>
-      <div class="middle">
-    <div><a class="extra-1-button" href="https://www.youtube.com/watch?v=e_bXlEvygHg" target="_blank">Play</a></div>
-    </div>
+            <a href="https://youtu.be/e_bXlEvygHg" target="_blank">
+              <video autoplay muted loop id="myVideo">
+                <source src="assets/videos/stafford_beer_feedback.mp4" type="video/mp4">
+              </video>
+            </a>
+          <div class="middle">
+        <div><a class="extra-1-button" href="https://www.youtube.com/watch?v=e_bXlEvygHg" target="_blank">Play</a></div>
+      </div>
     </div>
 
   </section>
@@ -80,6 +83,7 @@
 
     <p>Cybernetics can offer remedies in areas of medicine such as spinal cord injury.</p>
 
+    <!-- Medical Innovations Youtube Video -->
     <div id="medical-innovations">
       <iframe width="495" height="315" src="https://www.youtube.com/embed/Vq5UBwVCFyc">
       </iframe>
@@ -90,16 +94,19 @@
   <section class="extras-styling" id="extra-3">
     <h2>Body Modification</h2>
 
+    <!-- Body Modification Article -->
     <div id="body-mod-1">
       <a href="https://medium.com/@neurovizum/elon-musk-shared-details-about-the-progress-in-developing-a-sci-fi-brain-implant-by-his-neuralink-c5d625f7c478" target="_blank">
         <img src="assets/images/neurolink.png" alt="neurolink-image">
       </a>
+
       <div class="middle" id="extra-3-button-position">
         <div>
           <a class="extra-3-button" href="https://medium.com/@neurovizum/elon-musk-shared-details-about-the-progress-in-developing-a-sci-fi-brain-implant-by-his-neuralink-c5d625f7c478" target="_blank">Read Article</a>
         </div>
       </div>
     </div>
+
     <p>Some claim these kinds of medical innovations will eventually be utilized by healthy individuals in order to augment their bodies and abilities.
       <br>
       <br>
@@ -107,18 +114,6 @@
     </p>
 
   </section>
-
-  <!-- Footer -->
-  <!-- <section class="footer">
-    <div id="footer-content-container">
-    <a href="" target="_blank"></a>
-    <a href="" target="_blank"></a>
-    <a href="" target="_blank"></a>
-    <a href="" target="_blank"></a>
-
-    </div>
-  </section> -->
-
 
   <!-- My script(s) -->
   <script src="js/script_sources.js"></script>
