--- a/cybernetics_website_final/sources.html
+++ b/cybernetics_website_final/sources.html
@@ -115,6 +115,12 @@
 
       <p>Wiener, Norbert. 1961. <i>Cybernetics: Or, Control and Communication in the Animal and the Machine</i>. 2nd ed. New York: M.I.T. Press.</p>
 
+      <p><strong>Image Manipulation:</strong></p>
+
+      <p>https://www2.lunapic.com</p>
+      <p>https://pixel-me.tokyo/en/</p>
+
+
 
     </div>
   </section>
