--- a/my_personal_website_final/index.html
+++ b/my_personal_website_final/index.html
@@ -40,10 +40,10 @@
       <p>Have you seen this man? This is most likely me, but I'm not sure. Please check city hall to confirm.</p>
     </aside>
 
-    <article>
+    <article class="fade-in show-on-scroll">
       <h2>My Bio</h2>
       <p>My name is Azmat Ishaq. I am a student at Concordia University. I was born and raised in the suburbs of Montreal. I enjoy sports, literature, gaming, learning, writing and so much more. I do not have a background in web design but I am
-        hoping to learn and develop that skill set while I am studying in my Computation Arts program. I recently finished my first JavaScript course at Concordia and found that course to be very useful. I now understanding computing and programming
+        hoping to learn and develop that skill set while I am studying in my Computation Arts program. I recently finished my first JavaScript course at Concordia and found that course to be very useful. I now understand computing and programming
         much more, which I think is a useful skill in the modern age. Hopfully, as my skills progress in the area of programming, I can start to construct more sophisticated projects which previously only existed in my imagination.
 
       </p>
@@ -72,6 +72,8 @@
 
   </footer>
 
+
+<script src="js/script.js"></script>
 </body>
 
 </html>
