--- a/my_personal_website_final/links.html
+++ b/my_personal_website_final/links.html
@@ -25,12 +25,11 @@
 
   <section id="assignments" class="gallery">
     <!-- div*4>{$} -->
-    <div>1 <a href="assignments/task_1/index.html" target="_blank">Review Website</a></div>
-    <div>2 <a href="assignments/task_2/index.html" target="_blank">Responsive Website</a></div>
-    <div>3 <a href="#">Coming Soon</a></div>
-    </div>
-    <div>4 <a href="#">Coming Soon</a></div>
-    </div>
+    <div><span>1</span> <a href="assignments/task_1/index.html" target="_blank">Review Website</a></div>
+    <div><span>2</span> <a href="assignments/task_2/index.html" target="_blank">Responsive Website</a></div>
+    <div><span>3</span> <a href="#">Coming Soon</a></div>
+    <div><span>4</span> <a href="#">Coming Soon</a></div>
+
   </section>
 
   <!-- Use sections to differentiate between sections in your code -->
