--- a/my_personal_website_final/projects.html
+++ b/my_personal_website_final/projects.html
@@ -21,7 +21,7 @@
 
 
   <header>
-    <h1>Projects will go here</h1>
+    <a id="project-link-1" class="animSpin" href="https://hybrid.concordia.ca/a_isha/dart349/cybernetics_website_final/"><h1>Cybernetics Website</h1></a>
   </header>
 
 
